add new project in work

--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ header {
 .hackday { background-color: #58b2dc; }
 .nodejs { background-color: #78c2c4; }
 .startup { background-color: #fad689; }
+.game { background-color: #592c63; }
 
 #about {
     background-color: #8f77b5;
