--- a/style.css
+++ b/style.css
@@ -19,7 +19,12 @@ ul {
     padding: 0;
 }
 
-h3, h4, h5, h6 {
+h3 {
+    font-weight: normal;
+    font-size: 150%;
+}
+
+h4 {
     font-weight: lighter;
     font-size: 120%;
 }
@@ -43,7 +48,7 @@ header {
 }
 
 .menu li {
-    width: 20%;
+    width: 16.5%;
     display: inline-block;
 }
 
@@ -112,6 +117,15 @@ header {
 
 #experience {
     background-color: #838a2d;
+}
+
+#skills {
+    background-color: #66bab7;
+}
+
+#skills h4 {
+    display: inline-block;
+    margin-right: 1em;
 }
 
 #work {
