--- a/style.css
+++ b/style.css
@@ -104,12 +104,13 @@ header {
 .java { background-color: #0f2540; }
 .ntu { background-color: #c1328e; }
 .ror { background-color: #d0104c; }
-.app { background-color: #82663a; }
+.ios { background-color: #81c7d4; }
 .y-internal { background-color: #66327c; }
 .hackday { background-color: #58b2dc; }
 .nodejs { background-color: #78c2c4; }
 .startup { background-color: #fad689; }
 .game { background-color: #592c63; }
+.android { background-color: #516e41; }
 
 #about {
     background-color: #8f77b5;
