--- a/style.css
+++ b/style.css
@@ -2,10 +2,13 @@ html {
     font-family: 'helvetica neue', sans-serif;
     font-weight: lighter;
     color: #fffffb;
+    height: 100%;
 }
 
 body {
     margin: 0;
+    height: 100%;
+    background-color: #0f2540;
 }
 
 a {
@@ -68,7 +71,7 @@ header {
 }
 
 .content {
-    min-height: 100%;
+    height: 100%;
 }
 
 .content p {
@@ -90,7 +93,7 @@ header {
     -moz-box-sizing: border-box;
     padding: 2em 10%;
     width: 100%;
-    min-height: inherit;
+    min-height: 100%;
 }
 
 .content li span {
