--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html {
     font-weight: lighter;
     color: #fffffb;
     height: 100%;
-    word-spacing: 2px;
+    letter-spacing: 1px;
 }
 
 body {
