--- a/style.css
+++ b/style.css
@@ -143,19 +143,19 @@ header {
 .web { background-color: #1e88a8; }
 .java { background-color: #0f2540; }
 .ntu { background-color: #c1328e; }
-.ror { background-color: #d0104c; }
+.ror, .php { background-color: #d0104c; }
 .ios { background-color: #81c7d4; }
 .yahoo { background-color: #66327c; }
 .hackday { background-color: #58b2dc; }
 .nodejs { background-color: #78c2c4; }
 .startup { background-color: #fad689; }
-.game { background-color: #592c63; }
+.game, .ar { background-color: #592c63; }
 .android { background-color: #516e41; }
 .private { background-color: #a96360; }
 .case { background-color: #838a2d; }
-.react { background-color: #3a8fb7; }
+.react, .vue { background-color: #3a8fb7; }
 .angular { background-color: #f9bf45; }
-.php { background-color: #e16b8c; }
+.golang, .kubernetes { background-color: #e16b8c; }
 .cuda, .matlab { background-color: #7ba23f; }
 .support { background-color: #fffffb; color: #0f2540; }
 
@@ -183,6 +183,11 @@ header {
 }
 
 #works { background-color: #689881; }
+
+#works li {
+    list-style: none;
+    margin: 1.5em 0;
+}
 
 .work-highlights {
     border-bottom: 1px solid #fffffb;
