--- a/style.css
+++ b/style.css
@@ -140,9 +140,7 @@ header {
     border-radius: 5px;
 }
 
-.content li span.discontinued {
-    margin-left: 0;
-    padding-left: 0;
+.discontinued {
     color: #535953;
     font-weight: bold;
 }
